Updated assets for swagger
Signed-off-by: Yograj Shisode <yshisode@vmware.com>

--- a/swagger/ALBServicesConfig.yaml
+++ b/swagger/ALBServicesConfig.yaml
@@ -381,12 +381,13 @@ definitions:
         type: object
         required:
             -   app_signature_config
+            -   case_config
             -   feature_opt_in_status
             -   ip_reputation_config
             -   portal_url
-            -   proactive_support_defaults
             -   split_proxy_configuration
             -   user_agent_db_config
+            -   waf_config
         properties:
             _last_modified:
                 description: "UNIX time since epoch in microseconds. Units(MICROSECONDS)."
@@ -398,6 +399,9 @@ definitions:
             asset_contact:
                 description: "Information about the default contact for this controller cluster. Field introduced in 20.1.1."
                 $ref: '#/definitions/ALBServicesUser'
+            case_config:
+                description: "Default values to be used for pulse case management. Field introduced in 21.1.1. Allowed in Basic edition, Essentials edition, Enterprise edition."
+                $ref: '#/definitions/CaseConfig'
             configpb_attributes:
                 description: "Protobuf versioning for config pbs. Field introduced in 21.1.1."
                 $ref: '#/definitions/ConfigPbAttributes'
@@ -419,9 +423,6 @@ definitions:
             portal_url:
                 description: "The FQDN or IP address of the customer portal. Field introduced in 18.2.6."
                 type: string
-            proactive_support_defaults:
-                description: "Default values to be used during proactive case creation and techsupport attachment. Field introduced in 20.1.1."
-                $ref: '#/definitions/ProactiveSupportDefaults'
             split_proxy_configuration:
                 description: "Split proxy configuration to connect external pulse services. Field introduced in 20.1.1."
                 $ref: '#/definitions/ProxyConfiguration'
@@ -442,6 +443,9 @@ definitions:
             uuid:
                 description: " Field introduced in 18.2.6."
                 type: string
+            waf_config:
+                description: "Default values to be used for pulse waf management. Field introduced in 21.1.1. Allowed in Basic edition, Essentials edition, Enterprise edition."
+                $ref: '#/definitions/WafCrsConfig'
     ALBServicesConfigApiResponse:
         type: object
         required:
@@ -490,6 +494,19 @@ definitions:
                 type: integer
                 default: 1440
                 format: int32
+    CaseConfig:
+        type: object
+        properties:
+            enable_auto_case_creation_on_controller_failure:
+                description: "Enable pro-active support case creation when a controller failure occurs. Field introduced in 21.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
+                type: boolean
+            enable_auto_case_creation_on_se_failure:
+                description: "Enable pro-active support case creation when a service engine failure occurs. Field introduced in 21.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
+                type: boolean
+            enable_cleanup_of_attached_files:
+                description: "Enable cleanup of successfully attached files to support case. Field introduced in 21.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition. Special default for Basic edition is false, Essentials edition is false, Enterprise is True."
+                type: boolean
+                default: True
     ConfigPbAttributes:
         type: object
         properties:
@@ -517,28 +534,20 @@ definitions:
             enable_appsignature_sync:
                 description: "Enable to subscribe to automated Application Signature Rulesets updates. Field introduced in 20.1.4. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
                 type: boolean
-            enable_auto_case_creation_on_se_failure:
-                description: "Enable pro-active support case creation when a service engine failure occurs. Field introduced in 20.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
-                type: boolean
-            enable_auto_case_creation_on_system_failure:
-                description: "Enable pro-active support case creation when a system failure occurs. Manual download will still be available in the customer portal. Field introduced in 20.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
-                type: boolean
-            enable_auto_download_waf_signatures:
-                description: "Enable to automatically download new CRS version to the Controller. Field introduced in 20.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
-                type: boolean
             enable_ip_reputation:
                 description: "Enable to subscribe to IP reputation updates. This is a requirement for using IP reputation in the product. Field introduced in 20.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
                 type: boolean
-            enable_systeminfo_collection:
-                description: "Subscribe to upload Controller Metrics and System Information to Pulse Portal. Field introduced in 21.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
+            enable_pulse_case_management:
+                description: "Enable Pulse Case Management. Field introduced in 21.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition. Special default for Basic edition is false, Essentials edition is false, Enterprise is True."
                 type: boolean
+                default: True
+            enable_pulse_waf_management:
+                description: "Enable Pulse WAF Management. Field introduced in 21.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition. Special default for Basic edition is false, Essentials edition is false, Enterprise is True."
+                type: boolean
+                default: True
             enable_user_agent_db_sync:
                 description: "Enable subscription to User-Agent database used for Bot Management. Field introduced in 21.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
                 type: boolean
-            enable_waf_signatures_notifications:
-                description: "Enable event notifications when new CRS versions are available. Field introduced in 20.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition. Special default for Basic edition is false, Essentials edition is false, Enterprise is True."
-                type: boolean
-                default: True
     ProactiveSupportDefaults:
         type: object
         properties:
@@ -580,3 +589,13 @@ definitions:
                 type: integer
                 default: 500
                 format: int32
+    WafCrsConfig:
+        type: object
+        properties:
+            enable_auto_download_waf_signatures:
+                description: "Enable to automatically download new WAF signatures/CRS version to the Controller. Field introduced in 21.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
+                type: boolean
+            enable_waf_signatures_notifications:
+                description: "Enable event notifications when new WAF signatures/CRS versions are available. Field introduced in 21.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition. Special default for Basic edition is false, Essentials edition is false, Enterprise is True."
+                type: boolean
+                default: True
