--- a/swagger/WafPolicyPSMGroup.yaml
+++ b/swagger/WafPolicyPSMGroup.yaml
@@ -554,6 +554,14 @@ definitions:
                 description: "Match_element index. Field introduced in 18.2.3."
                 type: integer
                 format: int32
+            match_case:
+                description: "Case sensitivity of match_op operation. Enum options - SENSITIVE, INSENSITIVE. Field introduced in 21.1.3."
+                type: string
+                default: "INSENSITIVE"
+            match_op:
+                description: "String operation to use for matching the sub_element. Default is EQUALS. Enum options - BEGINS_WITH, DOES_NOT_BEGIN_WITH, CONTAINS, DOES_NOT_CONTAIN, ENDS_WITH, DOES_NOT_END_WITH, EQUALS, DOES_NOT_EQUAL, REGEX_MATCH, REGEX_DOES_NOT_MATCH. Field introduced in 21.1.3."
+                type: string
+                default: "EQUALS"
             name:
                 description: "The variable specification. For example ARGS or REQUEST_COOKIES. This can be a scalar like PATH_INFO. Enum options - WAF_VARIABLE_ARGS, WAF_VARIABLE_ARGS_GET, WAF_VARIABLE_ARGS_POST, WAF_VARIABLE_ARGS_NAMES, WAF_VARIABLE_REQUEST_COOKIES, WAF_VARIABLE_QUERY_STRING, WAF_VARIABLE_REQUEST_BASENAME, WAF_VARIABLE_REQUEST_URI, WAF_VARIABLE_PATH_INFO. Field introduced in 18.2.3."
                 type: string
