Updated assets for swagger
Signed-off-by: Yograj Shisode <yshisode@vmware.com>

--- a/swagger/CustomIpamDnsProfile.yaml
+++ b/swagger/CustomIpamDnsProfile.yaml
@@ -377,7 +377,7 @@ definitions:
                 items:
                     $ref: '#/definitions/CustomParams'
             script_uri:
-                description: "Script URI of form controller //ipamdnsscripts/<file-name>. Field introduced in 17.1.1."
+                description: "Script URI of form controller //ipamdnsscripts/<file-name>, file-name must have a .py extension and conform to PEP8 naming convention. Field introduced in 17.1.1."
                 type: string
             tenant_ref:
                 description: " It is a reference to an object of type Tenant. Field introduced in 17.1.1."
