--- a/swagger/avi_global_spec.yaml
+++ b/swagger/avi_global_spec.yaml
@@ -74836,6 +74836,11 @@ definitions:
             confidence_override:
                 description: "Deprecated (Moved to WafPolicy). Configure thresholds for confidence labels. Field deprecated in 20.1.1. Field introduced in 18.2.3."
                 $ref: '#/definitions/AppLearningConfidenceOverride'
+            content_type_mappings:
+                description: "WAF Content-Types and their request body parsers. Use this field to configure which Content-Types should be handled by WAF and which parser should be used. All Content-Types here are treated as 'allowed'. The order of entries matters. If the request's Content-Type matches an entry, its request body parser will run and no other parser will be invoked. Field introduced in 21.1.3. Maximum of 256 items allowed."
+                type: array
+                items:
+                    $ref: '#/definitions/WafContentTypeMapping'
             cookie_format_version:
                 description: "0  For Netscape Cookies. 1  For version 1 cookies. Allowed values are 0-1. Field introduced in 17.2.1."
                 type: integer
@@ -74919,6 +74924,18 @@ definitions:
                 description: "Block or flag XML requests referring to External Entities. Field introduced in 20.1.1."
                 type: boolean
                 default: True
+    WafContentTypeMapping:
+        type: object
+        required:
+            -   content_type
+            -   request_body_parser
+        properties:
+            content_type:
+                description: "Request Content-Type. When it is equal to request Content-Type header value, the specified request_body_parser is used. Field introduced in 21.1.3."
+                type: string
+            request_body_parser:
+                description: "Request body parser. Enum options - WAF_REQUEST_PARSER_URLENCODED, WAF_REQUEST_PARSER_MULTIPART, WAF_REQUEST_PARSER_JSON, WAF_REQUEST_PARSER_XML, WAF_REQUEST_PARSER_HANDLE_AS_STRING, WAF_REQUEST_PARSER_DO_NOT_PARSE. Field introduced in 21.1.3."
+                type: string
     WafCRS:
         type: object
         required:
