--- a/swagger/avi_global_spec.yaml
+++ b/swagger/avi_global_spec.yaml
@@ -53904,6 +53904,9 @@ definitions:
             linuxserver_configuration:
                 description: "Placeholder for description of property linuxserver_configuration of obj type Cloud field type str  type object"
                 $ref: '#/definitions/LinuxServerConfiguration'
+            maintenance_mode:
+                description: "Cloud is in maintenance mode. Field introduced in 20.1.7,21.1.3."
+                type: boolean
             mesos_configuration:
                 description: " Field deprecated in 18.2.2."
                 $ref: '#/definitions/MesosConfiguration'
