Updated assets for swagger
Signed-off-by: Yograj Shisode <yshisode@vmware.com>

--- a/swagger/HardwareSecurityModuleGroup.yaml
+++ b/swagger/HardwareSecurityModuleGroup.yaml
@@ -377,6 +377,7 @@ definitions:
             type:
                 description: "HSM type to use. Enum options - HSM_TYPE_THALES_NETHSM, HSM_TYPE_SAFENET_LUNA, HSM_TYPE_AWS_CLOUDHSM."
                 type: string
+                default: "HSM_TYPE_SAFENET_LUNA"
     HardwareSecurityModuleGroup:
         type: object
         required:
