--- a/swagger/VIMgrSEVMRuntime.yaml
+++ b/swagger/VIMgrSEVMRuntime.yaml
@@ -526,6 +526,12 @@ definitions:
             cloud_ref:
                 description: " It is a reference to an object of type Cloud."
                 type: string
+            cluster_id:
+                description: "ServiceEngine deployed on cluster.Ex MOB  domain-c23. Field introduced in 20.1.7, 21.1.3."
+                type: string
+            cluster_vmgroup:
+                description: "ServiceEngine added to cluster vmgroup. Field introduced in 20.1.7, 21.1.3."
+                type: string
             connection_state:
                 description: "connection_state of VIMgrSEVMRuntime."
                 type: string
@@ -621,6 +627,12 @@ definitions:
             vcenter_datacenter_uuid:
                 description: "Unique object identifier of vcenter_datacenter."
                 type: string
+            vcenter_host_connection_state:
+                description: "ServiceEngine host connection state in vCenter. Field introduced in 20.1.7, 21.1.3."
+                type: string
+            vcenter_host_ha_state:
+                description: "VCenter Host HA state.Ex  election, fdmUnreachable, hostDown, initializationError, networkIsolated, uninitializationError, uninitialized. Field introduced in 20.1.7, 21.1.3."
+                type: string
             vcenter_instance_uuid:
                 description: "ServiceEngine instance uuid from vCenter. Field introduced in 20.1.1."
                 type: string
@@ -652,6 +664,12 @@ definitions:
                 description: "Count of vcpus for each service engine VM. Field introduced in 18.2.2."
                 type: integer
                 format: int32
+            vsphere_ha_enabled:
+                description: "VSphere HA on cluster enabled or not. Field introduced in 20.1.7, 21.1.3."
+                type: boolean
+            vsphere_ha_inprogress:
+                description: "If this flag is set to True, vCenter vSphere HA handles ServiceEngine failure. This flag is set dynamiclly based on underlying ESX HA state(connected, hostDown..etc). Field introduced in 20.1.7, 21.1.3."
+                type: boolean
     VIMgrSEVMRuntimeApiResponse:
         type: object
         required:
