--- a/swagger/ServerAutoScalePolicy.yaml
+++ b/swagger/ServerAutoScalePolicy.yaml
@@ -393,18 +393,18 @@ definitions:
                 description: "The cron expression describing desired time for the scheduled autoscale. Field introduced in 21.1.1."
                 type: string
             desired_capacity:
-                description: "Desired number of servers during Schedule intervals, it may cause scale-in or scale-out based on the value. Field introduced in 21.1.1."
+                description: "Desired number of servers during scheduled intervals, it may cause scale-in or scale-out based on the value. Field introduced in 21.1.1."
                 type: integer
                 format: int32
             enable:
-                description: "Enables the scheduled autoscaling. Field introduced in 21.1.1."
+                description: "Enables the scheduled autoscale. Field introduced in 21.1.1."
                 type: boolean
                 default: True
             end_date:
-                description: "Scheduled autoscale end date in ISO8601 format, said day will be included in schedule and have to be in future and greater than start date. Field introduced in 21.1.1."
+                description: "Scheduled autoscale end date in ISO8601 format, said day will be included in scheduled and have to be in future and greater than start date. Field introduced in 21.1.1."
                 type: string
             recurrence:
-                description: "Frequency of the Scheduled autoscale. Enum options - ONCE, EVERY_DAY, EVERY_WEEK, EVERY_MONTH. Field introduced in 21.1.1."
+                description: "Deprecated.Frequency of the Scheduled autoscale. Enum options - ONCE, EVERY_DAY, EVERY_WEEK, EVERY_MONTH. Field deprecated in 21.1.3. Field introduced in 21.1.1."
                 type: string
             schedule_max_step:
                 description: "Maximum number of simultaneous scale-in/out servers for scheduled autoscale. If this value is 0, regular autoscale policy dictates this. . Field introduced in 21.1.1."
@@ -412,7 +412,7 @@ definitions:
                 default: 1
                 format: int32
             start_date:
-                description: "Scheduled autoscale start date in ISO8601 format, said day will be included in schedule and have to be in future. Field introduced in 21.1.1."
+                description: "Scheduled autoscale start date in ISO8601 format, said day will be included in scheduled and have to be in future. Field introduced in 21.1.1."
                 type: string
     ServerAutoScalePolicy:
         type: object
@@ -498,7 +498,7 @@ definitions:
                 default: 300
                 format: int32
             scheduled_scalings:
-                description: "Schedule-based scale-in/out policy. During schedule intervals, metrics based autoscale is not enabled and number of servers will be solely derived from ScheduleScale policy. Field introduced in 21.1.1. Maximum of 1 items allowed."
+                description: "Scheduled-based scale-in/out policy. During scheduled intervals, metrics based autoscale is not enabled and number of servers will be solely derived from ScheduleScale policy. Field introduced in 21.1.1. Maximum of 1 items allowed."
                 type: array
                 items:
                     $ref: '#/definitions/ScheduledScaling'
