--- a/swagger/VIMgrSEVMRuntime.yaml
+++ b/swagger/VIMgrSEVMRuntime.yaml
@@ -564,6 +564,9 @@ definitions:
             flavor:
                 description: "flavor of VIMgrSEVMRuntime."
                 type: string
+            gcp_se_project_id:
+                description: "GCP Project ID in which SE is created. This field is applicable for GCP cloud type only. Field introduced in 20.1.7, 21.1.2, 21.1.3."
+                type: string
             guest_nic:
                 description: "Placeholder for description of property guest_nic of obj type VIMgrSEVMRuntime field type str  type object"
                 type: array
