--- a/swagger/avi_global_spec.yaml
+++ b/swagger/avi_global_spec.yaml
@@ -58037,6 +58037,9 @@ definitions:
                 type: array
                 items:
                     type: string
+            gcp_service_account_email:
+                description: "Email of GCP Service Account to be associated to the Service Engines. Field introduced in 20.1.7, 21.1.2."
+                type: string
             gcs_bucket_name:
                 description: "Google Cloud Storage Bucket Name where Service Engine image will be uploaded. This image will be deleted once the image is created in Google compute images. By default, a bucket will be created if this field is not specified. Field introduced in 18.2.1."
                 type: string
@@ -58220,6 +58223,11 @@ definitions:
             match_se_group_subnet:
                 description: "Match SE group subnets for VIP placement. Default is to not match SE group subnets. Field introduced in 18.2.9, 20.1.1."
                 type: boolean
+            route_priority:
+                description: "Priority of the routes created in GCP. Field introduced in 20.1.7, 21.1.2."
+                type: integer
+                default: 2000
+                format: int32
     GeoDB:
         type: object
         required:
