--- a/swagger/ControllerProperties.yaml
+++ b/swagger/ControllerProperties.yaml
@@ -580,6 +580,21 @@ definitions:
                 type: integer
                 default: 120
                 format: int32
+            vsphere_ha_detection_timeout:
+                description: "vSphere HA monitor detection timeout. If vsphere_ha_enabled is true and the controller is not able to reach the SE, placement will wait for this duration for vsphere_ha_inprogress to be marked true before taking corrective action. Field introduced in 20.1.7, 21.1.3. Unit is SEC."
+                type: integer
+                default: 120
+                format: int32
+            vsphere_ha_recovery_timeout:
+                description: "vSphere HA monitor recovery timeout. Once vsphere_ha_inprogress is set to true (meaning host failure detected and vSphere HA will recover the Service Engine), placement will wait for at least this duration for the SE to reconnect to the controller before taking corrective action. Field introduced in 20.1.7, 21.1.3. Unit is SEC."
+                type: integer
+                default: 480
+                format: int32
+            vsphere_ha_timer_interval:
+                description: "vSphere HA monitor timer interval for sending cc_check_se_status to Cloud Connector. Field introduced in 20.1.7, 21.1.3. Unit is SEC."
+                type: integer
+                default: 20
+                format: int32
             warmstart_se_reconnect_wait_time:
                 description: " Unit is SEC."
                 type: integer
